# Equi7Grid

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CHANGES.rst  Justfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  conda_environment.yml  doc_requirements.txt  environment.yml  environment_win.yml  mdsnippets.json  pyproject.toml  readthedocs.yml  requirements.txt  rtd_environment.yml  setup.cfg  setup.py  setup_env  test-requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-docs.md  4-change.md
.github/workflows/: build_docs.yml  ci.yml  release.yml  snippets.yml  test_pkg.yml  ubuntu.yml  upload_pypi.yml  windows.yml
.github/workflows/workflows/: ubuntu.yml  windows.yml
DOCUMENTATION/: EQUI7_V13_Tiles_Statistics.xlsx  The Equi7 Grid Concept.pptx  equi7_V13_zones.qgs  equi7_V13_zones.qgs~  statistics.tex  statistics2.tex
DOCUMENTATION/grid definition document/versions/EQUI7_V13_grid_and_tiling_definition_document_issue01/: EQUI7_V13_grid_and_tiling_definition_document_issue01.aux  EQUI7_V13_grid_and_tiling_definition_document_issue01.blg  EQUI7_V13_grid_and_tiling_definition_document_issue01.tex  EQUI7_V13_grid_and_tiling_definition_document_issue01.toc  EQUI7_V13_grid_and_tiling_definition_document_issue02.aux  EQUI7_V13_grid_and_tiling_definition_document_issue02.bbl  EQUI7_V13_grid_and_tiling_definition_document_issue02.blg  EQUI7_V13_grid_and_tiling_definition_document_issue02.tex  EQUI7_V13_grid_and_tiling_definition_document_issue02.toc  Equi7_Grid_v11_Documentation.bib
DOCUMENTATION/grid definition document/versions/EQUI7_V13_grid_definition_document_public_package_issue01/: EQUI7_V12_grid_definition_document_public_package_issue01.aux  EQUI7_V12_grid_definition_document_public_package_issue01.blg  EQUI7_V12_grid_definition_document_public_package_issue01.tex  EQUI7_V12_grid_definition_document_public_package_issue01.toc  Thumbs.db
DOCUMENTATION/license/: Equi7_V13_License.aux  Equi7_V13_License.tex
DOCUMENTATION/qgis plots equi7/: NA_zones.qgs  NA_zones.qgs~  NA_zones_2.qgs  Thumbs.db  equi7_tiles_northamerica_T0.pngw
Equi7Grid/: CopernicusGrid.py  Equi7Grid.py  Equi7Grid_old.py  PixelDownsampler.py  TiledProjection.py  command_line.py  gdalport.py  geometry.py  kernel.py  parallel.py  platform.py
Equi7Grid/grids/AF/GEOG/: EQUI7_V13_AF_GEOG_TILE_T1.sbn  EQUI7_V13_AF_GEOG_TILE_T3.sbn  EQUI7_V13_AF_GEOG_TILE_T3.sbx  EQUI7_V13_AF_GEOG_TILE_T3.shp  EQUI7_V13_AF_GEOG_TILE_T6.sbx
Equi7Grid/grids/AF/PROJ/: EQUI7_V13_AF_PROJ_LAND.prj  EQUI7_V13_AF_PROJ_LAND.sbn  EQUI7_V13_AF_PROJ_LAND.sbx  EQUI7_V13_AF_PROJ_LAND.shp  EQUI7_V13_AF_PROJ_LAND.shx  EQUI7_V13_AF_PROJ_TILE_T1.dbf  EQUI7_V13_AF_PROJ_TILE_T3.shp  EQUI7_V13_AF_PROJ_TILE_T6.dbf  EQUI7_V13_AF_PROJ_ZONE.sbn
Equi7Grid/grids/AN/GEOG/: EQUI7_V13_AF_GEOG_LAND.dbf  EQUI7_V13_AF_GEOG_LAND.shp  EQUI7_V13_AN_GEOG_LAND.dbf  EQUI7_V13_AN_GEOG_LAND.shx  EQUI7_V13_AN_GEOG_TILE_T1.dbf  EQUI7_V13_AN_GEOG_TILE_T1.sbn  EQUI7_V13_AN_GEOG_TILE_T3.sbn  EQUI7_V13_AN_GEOG_TILE_T3.sbx  EQUI7_V13_AN_GEOG_TILE_T6.sbn  EQUI7_V13_AN_GEOG_TILE_T6.sbx  EQUI7_V13_AN_GEOG_ZONE.sbn  EQUI7_V13_AN_GEOG_ZONE.sbx  EQUI7_V13_AS_GEOG_LAND.dbf  EQUI7_V13_AS_GEOG_LAND.shx  EQUI7_V13_NA_GEOG_LAND.dbf  EQUI7_V13_SA_GEOG_LAND.dbf
GRIDS/kml/EQUI7_V13_TILE_T1_kml/: EQUI7_V13_EU_GEOG_TILE_T1.kml
GRIDS/kml/EQUI7_V13_TILE_T3_kml/: EQUI7_V13_AS_GEOG_TILE_T3.kml  EQUI7_V13_SA_GEOG_TILE_T3.kml
GRIDS/kml/EQUI7_V13_TILE_T6_kml/: EQUI7_V13_NA_GEOG_TILE_T6.kml
docs/: Makefile  api.md  conf.py  howto.ipynb  index.md  index.rst
docs/guides/: grid.ipynb  guide.ipynb  tile.ipynb  tiling_system.ipynb  warp.ipynb
docs/source/: docstrings_parser.py
docs/webviewer/: basic.md  coordinate_transformation.md  expert.md  home.md  index.md  layers.md  settings.md  tiles.md  tiling.md
documentation/google earth overlays/EQUI7_V13_TILE_T3_kml/: EQUI7_V13_NA_GEOG_TILE_T3.kml  EQUI7_V13_OC_GEOG_TILE_T3.kml
documentation/google earth overlays/EQUI7_V13_TILE_T6_kml/: EQUI7_V13_AF_GEOG_TILE_T6.kml  EQUI7_V13_AN_GEOG_TILE_T6.kml  EQUI7_V13_SA_GEOG_TILE_T6.kml
documentation/google earth overlays/EQUI7_V13_ZONE_kmz/: EQUI7_V13_zones.R
equi7grid/: Equi7Grid_old.py  copernicusgrid.py  equi7grid.py  image2equi7grid.py  skeleton.py
equi7grid/data/: create_distortion_files.py  make_equi7data.py
src/: copernicusgrid.py  equi7grid.py
src/data/: create_distortion_files.py  make_equi7data.py
src/equi7grid/: __init__.py  _const.py  _core.py  _create_grids.py  _types.py  _version.py  core.py  create_grids.py  equi7_to_lonlat.py  equi7grid.py  image2equi7grid.py  warp.py
src/equi7grid/data/: create_distortion_files.py  make_geojson_data.py  make_json_data.py
tests/: Equi7Grid_tests.py  approvaltests_config.json  check_gdal_aeqd_accuracy.py  conftest.py  test_CopernicusGrid.py  test_Equi7Grid.py  test_PixelDownsampler.py  test_approve_image2equi7grid.py  test_copernicusgrid.py  test_equi7grid.py  test_geom_intersect.py  test_skeleton.py  test_warp.py
tests/prj_accuracy_test/: gdalwarp_check_equi7.tif  gdalwarp_check_geo_expected.tif  lake_in_russia_equi7grid.tif  lake_in_russia_lonlat.tif
tests/resources/approved/: test_approve_image2equi7grid.test_approve_imag2equi7grid.E018N066T6.approved.tif  test_approve_image2equi7grid.test_approve_imag2equi7grid.E072N030T6.approved.tif  test_warp.test_reprojecting_lonlat_continuous.AS_E018N066T6.approved.tif  test_warp.test_reprojecting_lonlat_continuous.AS_E018N072T6.approved.tif  test_warp.test_reprojecting_lonlat_continuous.EU_E066N030T6.approved.tif  test_warp.test_reprojecting_lonlat_continuous_eu.EU_E072N030T6.approved.tif  test_warp.test_reprojecting_webmercator_discrete_eu.EU_E066N024T6.approved.tif  test_warp.test_reprojecting_webmercator_discrete_eu.EU_E066N030T6.approved.tif  test_warp.test_reprojecting_webmercator_discrete_eu.EU_E072N024T6.approved.tif  test_warp.test_reprojecting_webmercator_discrete_eu.EU_E072N030T6.approved.tif
(+433 files in other folders)
