[metadata]
name = equi7grid
version = attr: equi7grid.__version__
description = Definition and tools for Equi7Grid and its tiling system
author = TU Wien
author_email = remote.sensing@geo.tuwien.ac.at
license = mit
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://mrs.geo.tuwien.ac.at
project_urls =
    Documentation = https://equi7grid.readthedocs.io/
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

install_requires =
    numpy
    scipy
    veranda
    pytileproj
    geographiclib
    geopathfinder

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov equi7grid --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
